# fs-git-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DONE.md  LICENSE  MCP_TESTING.md  README.md  TESTING_ISSUES_FOUND.md  TOOLING.md  basic_mcp_test.py  comprehensive_demo.sh  comprehensive_mcp_test.py  debug_mcp_methods.py  minimal_fastmcp_test.py  pyproject.toml  simple_mcp_test.py  standalone_fastmcp_server.py  test_acceptance_criteria.py  test_comprehensive.py  test_comprehensive_fixed.py  test_fastmcp.py  test_mcp_functionality.py  test_minimal_fastmcp.py  test_minimal_mcp.py  test_tool_response.py
.github/workflows/: ci.yaml  pypi.yaml
mcp_server/: __init__.py  mcp_server.py  mcp_server_fastmcp.py  server.py  server_fastmcp_new.py  server_simple.py
mcp_server/assets/: commit_template.default.txt
mcp_server/cli/: main.py
mcp_server/git_backend/: commits.py  history.py  repo.py  safety.py  staging.py  templates.py
mcp_server/tools/: git_fs.py  integrate_code_diff.py  integrate_file_system.py  integrate_text_replace.py  reader.py
scripts/: complete_demo.sh  comprehensive_demo.sh  demo.sh  init_sample_repo.sh
tests/: test_mcp_integration.py  test_mcp_server.py  test_path_authorization.py
tests/unit/: test_environment_variables.py  test_git_fs.py  test_path_authorization.py  test_reader.py  test_safety.py
