[project]
name = "fs-git-mcp"
version = "0.1.0"
description = "MCP Git-enforced filesystem with direct and staged modes"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Alexis Okuwa", email = "wojonstech@gmail.com"}]
maintainers = [{name = "Alexis Okuwa", email = "wojonstech@gmail.com"}]
keywords = ["mcp", "git", "filesystem", "model-context-protocol", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.11"
urls = {Homepage = "https://github.com/wojons/fs-git-mcp", Repository = "https://github.com/wojons/fs-git-mcp"}
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "gitpython>=3.1",
    "dulwich>=0.21",
    "mcp>=1.0.0",
    "mcp[cli]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
fs-git = "mcp_server.cli.main:app"
fs-git-mcp = "mcp_server.server_fastmcp_new:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
line-length = 88
target-version = "py3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async"
]
testpaths = ["tests"]
addopts = "-v --strict-markers"